# Stepler

./: .gitignore  README.md  pyproject.toml
myapp/: main.py  metadata.json
mysh/: metadata.json  run.sh
stepler/: __init__.py  cli.py  package.py
